--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- <meta name="viewport" content="width=1000" initial-scale="1.0" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=1000" initial-scale="1.0" />
 
     <title>Jonathan Tay | Web Developer</title>
     <link
@@ -25,8 +24,8 @@
         <div class="center">
           <svg
             id="main-icon"
-            width="91"
-            height="91"
+            width="45"
+            height="45"
             viewBox="0 0 91 91"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -133,8 +132,8 @@
           <div class="main">
             <svg
               id="main-title"
-              width="636"
-              height="161"
+              width="318"
+              height="85"
               viewBox="0 0 636 161"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -286,11 +285,7 @@
               />
             </svg>
           </div>
-          <div
-            id="project-button"
-            class="contact-button"
-            style="width: 500px; margin-top: 40px"
-          >
+          <div id="project-button" class="contact-button">
             <a href="#" class="contact-me">
               <span></span>
               <span></span>
@@ -365,7 +360,7 @@
     </div>
 
     <div class="section skills-section" id="skills-section">
-      <div class="col-2" style="padding: 0 125px">
+      <div class="col-2" style="padding-left: 125px; box-sizing: border-box">
         <div class="section-header skills-header">Skills</div>
         <div
           class="skills"
@@ -413,18 +408,18 @@
       <div class="col-2">
         <div class="section-header-container">
           <div>
-            <img class="dp" src="./assets/images/dp.png" width="261" />
+            <img class="dp" src="./assets/images/dp.png" width="130px" />
           </div>
           <div class="section-header">About Me</div>
         </div>
         <div class="about-para">
-          <p style="margin-top: 60px">
+          <p>
             I am Jonathan Tay. My primary area of interest I have is undoubtedly
             in web development. My passion for software started 4 years ago, and
             I’ve consistently pushed myself to build new things that
             problem-solve in innovative ways.
           </p>
-          <p style="margin-top: 60px">
+          <p>
             I enjoy playing music and regularly post covers on my Instagram.
             Check it out at @jonsmusicthings!
           </p>
@@ -432,7 +427,7 @@
       </div>
       <div class="col-2">
         <div id="tagsContainer" class="center" style="align-items: center">
-          <canvas width="1200" height="1200" id="tagCanvas">
+          <canvas width="600" height="600" id="tagCanvas">
             <p>Your browser does not support canvas elements</p>
           </canvas>
         </div>
@@ -442,37 +437,33 @@
       </div>
     </div>
 
-    <div
-      class="section contact-section"
-      id="contact-section"
-      style="margin-bottom: 30vh"
-    >
-      <div class="section-container" style="padding: 0 125px">
+    <div class="section contact-section" id="contact-section">
+      <div class="section-container">
         <div class="section-header skills-header">Contact Me</div>
         <div class="about-para" style="margin-left: 0; width: 100%">
-          <p style="margin-top: 60px">
+          <p>
             I believe that innovative web design can help small businesses and
             individuals strengthen their online presence and branding.
           </p>
-          <p style="margin-top: 60px">
+          <p>
             I’m interested in freelance work, and bringing you flexible and
             personal web development services.
           </p>
         </div>
       </div>
-      <div class="section-container" style="padding: 0 100px">
-        <form id="contact-form" style="margin-top: 60px">
+      <div class="section-container">
+        <form id="contact-form">
           <div class="input-row">
             <input
               class="form-input"
               placeholder="Name"
-              style="margin-right: 15px"
+              style="margin-right: 7px"
               required
             />
             <input
               class="form-input"
               placeholder="Email"
-              style="margin-left: 15px"
+              style="margin-left: 7.5px"
               required
             />
           </div>
@@ -489,7 +480,7 @@
           </div>
           <div
             class="contact-button"
-            style="float: right; margin-top: 40px; margin-right: 15px"
+            style="float: right; margin-top: 20px; margin-right: 7.5px"
           >
             <div id="submit-contact" class="contact-me">
               <span></span>
