fixed small styles

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     </div>
 
     <div class="section skills-section" id="skills-section">
-      <div class="col-2" style="padding-left: 125px; box-sizing: border-box">
+      <div class="col-2" style="padding-left: 62.5px; box-sizing: border-box">
         <div class="section-header skills-header">Skills</div>
         <div
           class="skills"
@@ -414,14 +414,14 @@
         </div>
         <div class="about-para">
           <p>
-            I am Jonathan Tay. My primary area of interest I have is undoubtedly
-            in web development. My passion for software started 4 years ago, and
-            I’ve consistently pushed myself to build new things that
-            problem-solve in innovative ways.
+            I am Jonathan Tay. My primary area of interest is in web
+            development. My passion for software started 4 years ago, and I’ve
+            consistently pushed myself to build new things that problem-solve in
+            innovative ways.
           </p>
           <p>
-            I enjoy playing music and regularly post covers on my Instagram.
-            Check it out at @jonsmusicthings!
+            I enjoy playing music and regularly post covers on Instagram. Check
+            it out at @jonsmusicthings!
           </p>
         </div>
       </div>
@@ -471,7 +471,7 @@
               required
             />
           </div>
-          <div class="input-row">
+          <div id="subject-input-row" class="input-row">
             <input
               id="subject"
               name="subject"
